--- a/style/file.css
+++ b/style/file.css
@@ -1,8 +1,40 @@
+:root {
+  --primary-color: rgba(173, 173, 255, 0.767);
+  --heading-font-family: "Playfair Display", serif;
+  --default-font-family: "Poppins", sans-serif;
+}
+body {
+  font-family: var(--default-font-family);
+}
 h1 {
-  font-family: "Playfair Display", serif;
-  font-size: bold;
+  font-family: var(--heading-font-family);
+  font-size: 96px;
 }
 p {
-  font-family: "Poppins", sans-serif;
+  font-family: var(--default-font-family);
   font-size: normal;
+}
+.hero {
+  text-align: center;
+  background: var(--primary-color);
+  padding: 160px 20px;
+}
+.hero p {
+  font-size: 36px;
+  font-weight: bold;
+  margin: 0;
+}
+.hero h2 {
+  font-size: 24px;
+  font-family: var(--default-font-family);
+  font-weight: normal;
+  line-height: 2;
+}
+.btn-primary {
+  border-radius: 4px;
+  color: white;
+  background-color: blueviolet;
+  font-size: 18px;
+  line-height: 27px;
+  padding: 15px 30px;
 }
