--- a/style/file.css
+++ b/style/file.css
@@ -1,5 +1,6 @@
 :root {
-  --primary-color: rgba(173, 173, 255, 0.767);
+  --primary-color: #f0ece2;
+  --secondary-color: #596e79;
   --heading-font-family: "Playfair Display", serif;
   --default-font-family: "Poppins", sans-serif;
 }
@@ -33,7 +34,7 @@ p {
 .btn-primary {
   border-radius: 4px;
   color: white;
-  background-color: blueviolet;
+  background-color: var(--secondary-color);
   font-size: 18px;
   line-height: 27px;
   padding: 15px 30px;
