--- a/style/file.css
+++ b/style/file.css
@@ -39,3 +39,10 @@ p {
   line-height: 27px;
   padding: 15px 30px;
 }
+
+@media (max-width: 900) {
+  .project-description {
+    text-align: center;
+    padding: 0;
+  }
+}
