--- a/style/file.css
+++ b/style/file.css
@@ -31,7 +31,7 @@ p {
   font-weight: normal;
   line-height: 2;
 }
-.btn-primary {
+.btn-branding {
   border-radius: 4px;
   color: white;
   background-color: var(--secondary-color);
@@ -40,7 +40,33 @@ p {
   padding: 15px 30px;
 }
 
-@media (max-width: 900) {
+.btn-branding:hover {
+  color: var(--secondary-color);
+  background-color: rgb(223, 211, 211);
+}
+
+.btn-branding-outline {
+  font-size: 18px;
+  line-height: 27px;
+  padding: 15px 30px;
+  color: var(--secondary-color);
+  background-color: var(--primary-color);
+  border: 1px solid var(--secondary-color);
+  border-radius: 4px;
+}
+
+@media (max-width: 900px) {
+  h1 {
+    font-size: 50px;
+  }
+
+  h2 {
+    font-size: 44px;
+  }
+
+  .hero {
+    padding: 80px 20px;
+  }
   .project-description {
     text-align: center;
     padding: 0;
