--- a/style/file.css
+++ b/style/file.css
@@ -50,7 +50,7 @@ p {
   line-height: 27px;
   padding: 15px 30px;
   color: var(--secondary-color);
-  background-color: var(--primary-color);
+  background-color: white;
   border: 1px solid var(--secondary-color);
   border-radius: 4px;
 }
