added content container

--- a/style/file.css
+++ b/style/file.css
@@ -31,6 +31,24 @@ p {
   font-weight: normal;
   line-height: 2;
 }
+
+.about-section {
+  padding: 160px 20px;
+}
+
+.about-section h1 {
+  font-size: 64px;
+  line-height: 80px;
+}
+
+.about-section h2 {
+  font-size: 18px;
+  font-family: var(--default-font-family);
+}
+
+.about-section-content {
+  margin: 30px;
+}
 .btn-branding {
   border-radius: 4px;
   color: white;
@@ -68,6 +86,11 @@ p {
     padding: 80px 20px;
   }
   .project-description {
+    text-align: center;
+    padding: 0;
+  }
+
+  .about-section {
     text-align: center;
     padding: 0;
   }
