--- a/style/file.css
+++ b/style/file.css
@@ -32,30 +32,21 @@ p {
   line-height: 2;
 }
 
-.content-container {
+.about-section {
   padding: 160px 20px;
 }
 
-.content h1 {
+.about-section h1 {
   font-size: 64px;
   line-height: 80px;
 }
 
-.content h2 {
+.about-section h2 {
   font-size: 18px;
   font-family: var(--default-font-family);
 }
 
-.content h3 {
-  font-size: 24px;
-  font-family: var(--default-font-family);
-}
-
-.content p {
-  font-size: 14px;
-}
-
-.content {
+.about-section-content {
   margin: 30px;
 }
 .btn-branding {
@@ -99,7 +90,7 @@ p {
     padding: 0;
   }
 
-  .content-container {
+  .about-section {
     text-align: center;
     padding: 0;
   }
