--- a/style/file.css
+++ b/style/file.css
@@ -50,6 +50,11 @@ p {
   font-size: 24px;
   font-family: var(--default-font-family);
 }
+
+.content p {
+  font-size: 14px;
+}
+
 .content {
   margin: 30px;
 }
