--- a/style/file.css
+++ b/style/file.css
@@ -11,6 +11,12 @@ h1 {
   font-family: var(--heading-font-family);
   font-size: 96px;
 }
+
+h4 {
+  font-size: 48px;
+  font-family: var(--heading-font-family);
+}
+
 p {
   font-family: var(--default-font-family);
   font-size: normal;
@@ -111,6 +117,45 @@ nav a:hover,
 nav li.active a {
   color: var(--secondary-color);
   text-decoration: none;
+}
+
+footer {
+  margin: 60px 0;
+}
+
+footer .contact-box {
+  background-color: var(--primary-color);
+  padding: 30px 120px;
+  border-radius: 10px;
+}
+
+footer .contact-box p {
+  margin: 0;
+}
+
+footer .email-link {
+  text-decoration: none;
+  color: black;
+  text-align: center;
+  font-size: 24px;
+}
+
+footer .email-link:hover {
+  color: var(--secondary-color);
+}
+
+footer .social-links a {
+  margin: 0 20px;
+  background-color: var(--primary-color);
+  padding: 10px 14px;
+  font-size: 18px;
+  border-radius: 50%;
+  transition: all 100ms ease-in-out;
+}
+
+footer .social-links a:hover {
+  color: var(--primary-color);
+  background-color: var(--secondary-color);
 }
 
 @media (max-width: 900px) {
